# cicd_test01

./: .gitignore  README.md  dlapp_skelton.tgz  pyproject.toml
.github/workflows/: build_dlapp.yaml  deploy_stb.yaml  pytest_to_codecov.yaml
script/: build_dlapp_Actions.sh  fire_aciton_evnet.sh
src/main/: calc.py
tests/: test_calc.py  test_poetry_test.py  test_say.py
